--- a/frontend/src/app/components/period-view/period-view.component.css
+++ b/frontend/src/app/components/period-view/period-view.component.css
@@ -1,9 +1,33 @@
+/** form **/
+mat-expansion-panel {
+	box-shadow: none !important;
+}
+mat-expansion-panel-header:hover {
+	background: none !important;
+}
+mat-panel-title {
+	justify-content: center;
+}
+mat-radio-button {
+	margin-right: 10px;
+}
+.detail-form {
+	margin-bottom: 10px;
+}
+mat-checkbox {
+	margin-right: 5px;
+}
+.mat-checkbox-layout .mat-checkbox-inner-container {
+	margin-right: 4px !important;
+}
+
 /** table **/
 .mat-table {
 	overflow: auto;
 }
 .mat-table .type {
 	min-width: 60%;
+	cursor: pointer;
 }
 .mat-header-cell.mat-sort-header-sorted {
 	color: black;
