--- a/frontend/src/app/components/period-view/period-view.component.html
+++ b/frontend/src/app/components/period-view/period-view.component.html
@@ -1,26 +1,51 @@
 <div>
 	<mat-form-field>
 		<input
-		matInput
-		[matDatepicker]="startPicker"
-		[formControl]="startDate"
-		placeholder="開始日"
-		>
+			matInput
+			[matDatepicker]="startPicker"
+			[formControl]="startDate"
+			[min]="minDate"
+			placeholder="開始日">
 		<mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
 		<mat-datepicker #startPicker></mat-datepicker>
 	</mat-form-field>
 	<mat-form-field>
 		<input
-		matInput
-		[matDatepicker]="endPicker"
-		[formControl]="endDate"
-		placeholder="終了日"
-		>
+			matInput
+			[matDatepicker]="endPicker"
+			[formControl]="endDate"
+			[min]="minDate"
+			placeholder="終了日">
 		<mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
 		<mat-datepicker #endPicker></mat-datepicker>
 	</mat-form-field>
-	</div>
-	<div class="mat-form-field-wrapper" style="text-align: center">
+	<!-- <mat-expansion-panel>
+		<mat-expansion-panel-header>
+			<mat-panel-title>
+			詳細検索
+			</mat-panel-title>
+		</mat-expansion-panel-header>
+		<div class="detail-form">
+			<mat-radio-group [(ngModel)]="format">
+				<mat-radio-button value="殿堂">殿堂</mat-radio-button>
+				<mat-radio-button value="2ブロック" [disabled]="true">2ブロック</mat-radio-button>
+			</mat-radio-group>
+		</div>
+		<div class="detail-form">
+			<mat-radio-group>
+				<mat-radio-button checked="true" value="殿堂">デッキタイプで検索</mat-radio-button>
+				<mat-radio-button value="2ブロック">文明で検索</mat-radio-button>
+			</mat-radio-group>
+			<mat-checkbox>光</mat-checkbox>
+			<mat-checkbox>水</mat-checkbox>
+			<mat-checkbox>闇</mat-checkbox>
+			<mat-checkbox>火</mat-checkbox>
+			<mat-checkbox>自然</mat-checkbox>
+			<mat-checkbox>ゼロ</mat-checkbox>
+		</div>
+	</mat-expansion-panel> -->
+</div>
+<div class="mat-form-field-wrapper" style="text-align: center">
 	<button mat-raised-button color="primary"
 		(click)="search()">
 		検索
@@ -30,7 +55,12 @@
 	<mat-table #table [dataSource]="dataSource" matSort>
 		<ng-container matColumnDef="type">
 		<mat-header-cell class="type" *matHeaderCellDef mat-sort-header>デッキタイプ</mat-header-cell>
-		<mat-cell class="type" *matCellDef="let element" [innerHTML]="element.type | nl2br" (click)="openDialog()"></mat-cell>
+		<mat-cell
+			class="type"
+			*matCellDef="let element"
+			[innerHTML]="element.type | nl2br"
+			(click)="move(element.type)">
+		</mat-cell>
 		</ng-container>
 		<ng-container matColumnDef="games">
 		<mat-header-cell *matHeaderCellDef mat-sort-header>数</mat-header-cell>
@@ -51,4 +81,4 @@
 		<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 		<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 	</mat-table>
-</div>  
+</div>
